dashy/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dashy
spec:
  selector:
    app: dashy
  ports:
    - port: 80
